# gimbatuluk

./: CMakeLists.txt  README.md  pfac-opencl-cpu.cl  pfac-opencl-gpu.cl  run-benchmarks.sh  simple-benchmark-async.cpp  simple-benchmark-compact.cpp  simple-benchmark-threaded-compact.cpp  simple-benchmark-threaded.cpp  simple-benchmark.cpp  simple-scan-async.cpp  simple-scan-compact.cpp  simple-scan.cpp  soak-test-async.cpp  soak-test-compact.cpp  test1024  test15  test16384  test2048  test256  test4096  test8192
cmake-modules/: FindOpenCL.cmake
doc/: gimbatuluk.odt
include/: pfac.h
src/: c++14-polyfill.h  circular-store.h  dictionary.cpp  dictionary.h  pfac.cpp  scanner-cpu.cpp  scanner-cpu.h  scanner-opencl.cpp  scanner-opencl.h  scanner.h
